--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,16 @@
     background: none;
   }
 }
+
+.mobileImg {
+  z-index: 20;
+  position: absolute;
+  bottom: 0;
+  left: -50%;
+  width: 22rem;
+  height: auto;
+}
+
+.nextPage {
+  z-index: 30;
+}
