--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 .homeImage {
   width: 100%;
+  height: 100vh;
   background-image: url("assets/bg.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -23,12 +24,16 @@
   }
 }
 
-.mobileImg {
+.mobileImgContainer {
+  background: red;
+  width: 100%;
+  height: 100vh;
+}
+
+.mobileImage {
   position: absolute;
   bottom: 0;
   left: -50%;
-  width: 22rem;
-  height: auto;
 }
 
 .nextPage {
