--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,14 @@
 }
 
 .mobileImgContainer {
-  background: red;
   width: 100%;
   height: 100vh;
 }
 
 .mobileImage {
+  z-index: 20;
+  width: 25rem;
+  height: 25rem;
   position: absolute;
   bottom: 0;
   left: -50%;
